# serializer version: 1
# name: test_all_entities[button.ampio_47846_obj_149-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.ampio_47846_obj_149',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bell',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_47846_obj_149',
    'supported_features': 0,
    'translation_key': 'bell',
    'unique_id': '47846_obj_149',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.ampio_47846_obj_149-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'm-sens salon Bell',
    }),
    'context': <ANY>,
    'entity_id': 'button.ampio_47846_obj_149',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.ampio_47846_obj_150-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.ampio_47846_obj_150',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dzwonek',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_47846_obj_150',
    'supported_features': 0,
    'translation_key': 'bell',
    'unique_id': '47846_obj_150',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.ampio_47846_obj_150-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'm-sens salon Dzwonek',
    }),
    'context': <ANY>,
    'entity_id': 'button.ampio_47846_obj_150',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.ampio_47846_obj_151-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.ampio_47846_obj_151',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dzwonek',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_47846_obj_151',
    'supported_features': 0,
    'translation_key': 'bell',
    'unique_id': '47846_obj_151',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.ampio_47846_obj_151-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'm-sens salon Dzwonek',
    }),
    'context': <ANY>,
    'entity_id': 'button.ampio_47846_obj_151',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
